src/test/ui/let-else/let-else-check.stderr
error: unused variable: `x`
  --> $DIR/let-else-check.rs:13:9
   |
LL |     let x = 1;
   |         ^ help: if this is intentional, prefix it with an underscore: `_x`
   |
note: the lint level is defined here
  --> $DIR/let-else-check.rs:3:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

